layout bug fixed

--- a/stylesheets/common.styl
+++ b/stylesheets/common.styl
@@ -13,4 +13,7 @@ body
 .afe-serif
 	font-serif()
 
+h4, .h4
+	font-weight: 600
+
 @import 'components/footer.styl'
